* <span class="label label-danger">Removed</span> **The server parts which supported the Workflow feature** has been removed too. It was our first experiment in moving Sirius to the web, but this is now replaced by the newly published "Sirius Web":https://www.eclipse.org/sirius/sirius-web.html. This corresponds to all the @org.eclipse.sirius.server.*@ plug-ins.

h4. Changes in @org.eclipse.sirius@

* <span class="label label-success">Added</span> The classes @org.eclipse.sirius.business.api.image.ImageManager@ and @org.eclipse.sirius.business.api.image.Base64ImageHelper@ have been added to support image management such as image creation from base64 string or image path serialization.
* <span class="label label-success">Added</span> The class @org.eclipse.sirius.business.api.query.SiriusReferenceFinderCache@ has been added. This cache allows to avoid redundant computing to find impacted DRepresentationDescriptors returned by @org.eclipse.sirius.business.api.query.SiriusReferenceFinder.getImpactedRepresentationDescriptors@.
* <span class="label label-success">Added</span> @org.eclipse.sirius.business.api.query.SiriusReferenceFinder.CACHE@ is a convenience to use @org.eclipse.sirius.business.api.query.SiriusReferenceFinderCache@.
* <span class="label label-info">Modified</span> @org.eclipse.sirius.viewpoint.SiriusPlugin@ has been renamed to @org.eclipse.sirius.tools.api.SiriusPlugin@
* <span class="label label-info">Modified</span> @org.eclipse.sirius.viewpoint.Messages@ has been renamed to @org.eclipse.sirius.tools.api.Messages@
* <span class="label label-info">Modified</span> @org.eclipse.sirius.business.api.helper.ViewpointUtil@ has been deprecated, @org.eclipse.sirius.model.business.api.helper.ViewpointUtil@ from plugin @org.eclipse.sirius.model@ should be used instead.