@@ -89,6 +89,12 @@
 			<li>
 				<code>org.eclipse.sirius.diagram.ui.provider.Messages.AbstractDEdgeNameEditPart_VisualID_Error</code>
 			</li>
+			<li>
+				<code>org.eclipse.sirius.tools.api.Messages.DRepresentationDescriptorQuery_representationError_broken_srm_path</code>
+			</li>
+			<li>
+				<code>org.eclipse.sirius.tools.api.Messages.DRepresentationDescriptorQuery_representationError_broken_fragment_path</code>
+			</li>
 		</ul>
 		<h3 id="MessageKeysRemoved">Message Keys Removed</h3>
 		<ul>
