@@ -148,6 +148,8 @@ DeleteWithoutToolTask_label = Delete without tool
 DialectManagerImpl_refreshImpactedMsg = Refresh impacted representation elements
 DialectManagerImpl_refreshMsg = Refresh representation
 DRepresentationDescriptorQuery_representationError = An exception was raised while trying to check existence of the representation associated to the following representation descriptor: name: {0}, repPath: {1}, uid: {2}.
+DRepresentationDescriptorQuery_representationError_broken_srm_path = Representation {0} unavailable: The resource {1} does not exists
+DRepresentationDescriptorQuery_representationError_broken_fragment_path = Representation {0} unavailable: The resource {1} exists but has no representation with fragment {2}
 DRepresentationDescriptorToDRepresentationLinkManager_repLoading = Can not load the resource {0}
 DViewOperations_addSelectedViewMsg = View selection
 DViewOperations_createViewMsg = View creation for Sirius : {0}
