@@ -29,6 +29,7 @@ h3. Developer-Visible Changes
 * <span class="label label-info">Modified</span> The @org.eclipse.sirius.ext.base.Option<T>@ helper type has been deprecated for removal. It will be progressively replaced by the standard @java.util.Optional@ type in our APIs.
 * <span class="label label-danger">Removed</span> **The "Workflow" feature** has been removed . Workflow was experimental and to our knowledge not used in practice. This corresponds to the @org.eclipse.sirius.workflow.*@ and @org.eclipse.sirius.editor.workflow@ plug-ins.
 * <span class="label label-danger">Removed</span> **The server parts which supported the Workflow feature** has been removed too. It was our first experiment in moving Sirius to the web, but this is now replaced by the newly published "Sirius Web":https://www.eclipse.org/sirius/sirius-web.html. This corresponds to all the @org.eclipse.sirius.server.*@ plug-ins.
+* <span class="label label-success">Added</span> The method @org.eclipse.sirius.business.api.query.DRepresentationDescriptorQuery.isRepresentationReachable(boolean)@ was added to allow it to load the representation in order to verify that the representation element is reachable, not just its resource. To benefit from this new method, @org.eclipse.sirius.business.api.query.DRepresentationDescriptorQuery.isRepresentationValid(boolean)@ and @org.eclipse.sirius.business.api.query.DRepresentationDescriptorQuery.DRepresentationDescriptorValidityAdapter.triggerRepresentationValidation(boolean)@ were also created. These new methods (with a parameter value true) can be used in tests, but should not be used by the "Model explorer" view otherwise there would be no more lazy loading of representations.
 
 h4. Changes in @org.eclipse.sirius@
 
